--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Meus jogos</title>
 </head>
 <body>
+    <p>Guiller</p>
+    <p>Estanei</p>
     <h1>Sistema de cadastro de jogos</h1>
     <script src="app.js"></script>
 </body>
